--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jshint-stylish": "^1.0.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "5.2.0",
+    "npm": "3.3.12"        
   },
   "dependencies": {
     "express": "^4.13.3",
