--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "ng-dialog": "~0.5.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
