--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "npm": "3.3.12"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "gzippo": "^0.2.0",
     "autoprefixer-core": "^5.2.1",
     "bower": "^1.7.1",
+    "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-cli": "^0.1.13",
@@ -33,8 +32,10 @@
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "gzippo": "^0.2.0",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "ng-dialog": "^0.5.6",
     "time-grunt": "^1.0.0"
   },
   "scripts": {
