--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "~0.14.3",
-    "ng-dialog": "~0.5.6"
+    "ng-dialog": "~0.5.6",
+    "angularUtils-pagination": "angular-utils-pagination#~0.9.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
